# rane

./: .gitignore  ANE_API.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml  bench.rs  compare.rs
docs/explanation/: how-ane-works.md
docs/guides/: surface-lifecycle.md
docs/tutorials/: first-dispatch.md
examples/: bench.rs  compare.rs  compile_kernels.rs  infer.rs  matmul.rs  train.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out/diff/: src__ffi.rs_line_165_col_5.diff  src__ffi.rs_line_172_col_5.diff  src__ffi.rs_line_182_col_5.diff  src__ffi.rs_line_187_col_5.diff  src__ffi.rs_line_192_col_5.diff  src__ffi.rs_line_192_col_5_001.diff  src__ffi.rs_line_192_col_5_002.diff  src__ffi.rs_line_213_col_5.diff  src__ffi.rs_line_213_col_5_001.diff  src__ffi.rs_line_214_col_9.diff  src__ffi.rs_line_215_col_9.diff  src__ffi.rs_line_216_col_9.diff  src__ffi.rs_line_217_col_9.diff  src__ffi.rs_line_218_col_9.diff  src__ffi.rs_line_219_col_9.diff  src__ffi.rs_line_220_col_9.diff  src__lib.rs_line_105_col_9.diff  src__lib.rs_line_85_col_9.diff  src__mil__mod.rs_line_103_col_40.diff  src__mil__mod.rs_line_103_col_40_001.diff  src__mil__mod.rs_line_103_col_5.diff  src__mil__mod.rs_line_103_col_5_001.diff  src__mil__mod.rs_line_103_col_5_002.diff  src__mil__mod.rs_line_104_col_21.diff  src__mil__mod.rs_line_104_col_21_001.diff  src__mil__mod.rs_line_116_col_23.diff  src__mil__mod.rs_line_116_col_23_001.diff  src__mil__mod.rs_line_116_col_27.diff  src__mil__mod.rs_line_116_col_27_001.diff  src__mil__mod.rs_line_117_col_23.diff  src__mil__mod.rs_line_117_col_23_001.diff  src__mil__mod.rs_line_23_col_9.diff  src__mil__mod.rs_line_23_col_9_001.diff  src__mil__mod.rs_line_26_col_9.diff  src__mil__mod.rs_line_26_col_9_001.diff  src__mil__mod.rs_line_26_col_9_002.diff  src__mil__mod.rs_line_26_col_9_003.diff  src__mil__mod.rs_line_29_col_9.diff  src__mil__mod.rs_line_29_col_9_001.diff  src__mil__mod.rs_line_29_col_9_002.diff  (+181 more)
specs/: api.md
src/: accel.rs  config.rs  ffi.rs  lib.rs  main.rs  model.rs  staging.rs  surface.rs  weights.rs
src/mil/: ffn.rs  mod.rs  projection.rs  sdpa.rs
src/ops/: activation.rs  (+8 more)
tests/: hardware.rs  integration.rs
tools/: Cargo.toml  chat.rs  convert_hf.py  convert_hf.rs  dashboard.py  infer.py  tokenize.rs
(+6 files in other folders)
