[workspace]
members = [".", "benches"]
resolver = "2"

[package]
name = "ane"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Cyber"
description = "Pure Rust access to Apple Neural Engine — compile MIL, load, run on ANE hardware"

[lib]
name = "ane"
path = "src/lib.rs"

[[bin]]
name = "ane_probe"
path = "src/probe/main.rs"

[[example]]
name = "matmul"
path = "examples/matmul.rs"
